biscuit-terminal/lib/tests/snapshots/layout_matrix__StatusBlock__left_margin_4.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
assertion_line: 99
expression: block
---
VIA_RENDER
    ⤫ Shell Expansion Failed

    ┃ 
    ┃ 
    ┃ Missing closing brace in template directive.
    ┃ 
    ┃ 
    ┃ 
    ┃ Check the template syntax and retry.
---
VIA_TREE_DIRECT
    ⤫ Shell Expansion Failed

    ┃ 
    ┃ 
    ┃ Missing closing brace in template directive.
    ┃ 
    ┃ 
    ┃ 
    ┃ Check the template syntax and retry.
